# usprings_rag

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_indexes.py  0003_partition_chunks_by_collection.py  0004_collections_table.py  0005_users_table.py  0006_user_collection_access.py  0007_query_log.py  0008_document_softdelete_index_job.py
docs/: how-it-works.md  maintenance.md  open-questions.md  overview.md
docs/1C_parsing/: build_registry.py  its_parse_all.py  its_parse_pdf_test.py  its_parse_test.py  parsing-guide.md  registry-zupcorpdoc.md  registry.md
docs/MVP/MVP0/: backlog.md  mvp-dev-plan-progress.md  mvp-dev-plan.md  mvp-plan.md
docs/MVP/MVP1/: backlog.md  mvp-dev-plan-progress.md  mvp-dev-plan.md
docs/MVP/MVP2/: backlog.md  ldap-questions.md
docs/manuals/parsed/: its_test_1c_kassa_settings.md
docs/prod/: infrastructure-requirements.md
eval/: build_contexts.py  questions.yaml  run_ab.py  run_answers.py  run_eval.py
src/usprings_rag/: answer.py  api.py  auth.py  collection.py  collections_service.py  config.py  db.py  embeddings.py  history.py  llm.py  logging_qa.py  models.py  retrieval.py  search_cli.py  security.py
src/usprings_rag/admin/: __init__.py  analytics.py  calibration.py  documents.py  logs.py  users.py
src/usprings_rag/indexing/: __init__.py  jobs.py  worker.py
src/usprings_rag/ingest/: __init__.py  chunker.py  cli.py  pdf.py  pipeline.py
src/usprings_rag/static/: app.js  style.css
src/usprings_rag/templates/: history.html  history_entry.html  index.html  login.html  profile.html
src/usprings_rag/templates/admin/: analytics.html  calibration.html  collections.html  documents.html  logs.html  users.html
staging/: README.md  deployment-plan.md
tests/: test_access.py  test_admin_collections.py  test_admin_documents.py  test_admin_logs.py  test_admin_users.py  test_analytics.py  test_answer.py  test_auth.py  test_calibration.py  test_chunker.py  test_collection_isolation.py  test_collections_service.py  test_feedback.py  test_history.py  test_indexing.py  test_logging.py  test_navigation.py  test_pipeline.py  test_retrieval.py  test_security.py  test_soft_delete.py  test_stream.py
