[project]
name = "usprings-rag"
version = "0.1.0"
description = "Внутренний RAG-ассистент по инструкциям (пилот 1С ERP)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
ingest = "usprings_rag.ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usprings_rag"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
