[project]
name = "usprings-rag"
version = "0.1.0"
description = "Внутренний RAG-ассистент по инструкциям (пилот 1С ERP)"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "itsdangerous>=2.2.0",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
ingest = "usprings_rag.ingest.cli:main"
search = "usprings_rag.search_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usprings_rag"]

[tool.pytest.ini_options]
# Только tests/: в docs/1C_parsing лежат скрипты парсинга (its_parse_test.py и
# другие), они подходят под шаблон pytest, но тестами не являются и живут на
# отдельных зависимостях (uv run --with requests ...).
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
